написал скрипт и стилистику

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 
           <div class="bk-i">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-            <input class="" type="text" name="" placeholder="Search for a country..." value="">
+            <input class="searchBy" type="text" name="" placeholder="Search for a country..." value="">
           </div>
 
           <div class="bk-filter">
 
-            <select>
+            <select id="byRegion">
               <option value="" selected disabled hidden>Filter by Region</option>
-              <option value="africa">Africa</option>
-              <option value="america">America</option>
-              <option value="asia">Asia</option>
-              <option value="europe">Europe</option>
-              <option value="oceania">Oceania</option>
+              <option value="Africa">Africa</option>
+              <option value="Americas">America</option>
+              <option value="Asia">Asia</option>
+              <option value="Europe">Europe</option>
+              <option value="Oceania">Oceania</option>
             </select>
             <svg class="arr-down" width="12" height="12" viewBox="0 0 4.303 7.4840002" xmlns="http://www.w3.org/2000/svg"><path fill="#494949" d="M4.307 3.74l-.562.56-3.18 3.182-.56-.56 3.18-3.182L.004.56l.56-.562 3.18 3.18z"/></svg>
 
@@ -59,29 +59,10 @@
     </section>
 
     <section class="output-block">
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col">
-
-          </div>
-
-          <div class="col">
-
-          </div>
-
-          <div class="col">
-
-          </div>
-
-          <div class="col">
-
-          </div>
+      <div class="container output">
 
       </div>
     </section>
-
 
   </body>
 </html>
